<resources>
    <string name="app_name">Step</string>

    <string name="file_provider">com.smg.mkframe.fileprovider</string>
    <string name="notifyTitle">提示</string>
    <string name="notifyMsg">当前应用缺少必要权限。\n\n请点击\"设置\"-\"权限\"-打开所需权限。</string>
    <string name="setting">设置</string>
    <string name="cancel">取消</string>

    <string name="splash_trans">splashIcon</string>
    <string name="splash_label">splashTxt</string>
    <string name="city_badge">cityBadge</string>

    <string name="wxappid">wxc691f0095ed06444</string>
    <string name="wyappid">23b9d29dc4cbfff89a0bfead16afb1a3</string>

    <string name="dialog_title_tip">提示</string>

    <string name="menu_paihang">排行榜</string>
    <string name="menu_msg">我的消息</string>
    <string name="menu_mood">心情</string>
    <string name="menu_go">约行</string>
    <string name="menu_discovery">探索</string>
    <string name="menu_acheive">成就</string>
    <string name="menu_setting">设置</string>

    <string name="good_user_title">这些用户点赞了该%1$s</string>

    <string name="join_num">邀约%1$d人, 已报名%2$d人</string>
    <string name="join_num1">邀约不限, 已报名%1$d人</string>
    <string name="commit_title">共%1$d条留言</string>
    <string name="contact_phone"><![CDATA[联系电话 <font color="#00a8ff">4008203766</font>]]></string>
    <string name="email"><![CDATA[联系邮箱 <font color="#00a8ff">support@westepper.com</font>]]></string>
    <string name="protocol"><u>用户使用协议</u></string>

    <string name="geo_fence_receiver">com.westepper.step.geofencereceiver</string>
    <string name="geo_receiver">com.westepper.step.widgets.georeceiver</string>

    <string name="team_apply_sending">发送中…</string>
    <string name="verify_reminder">验证提醒</string>
    <string name="delete_tip">删除提示</string>
    <string name="delete_system_message">删除该条系统消息？</string>
    <string name="delete_success">删除成功</string>
    <string name="clear_all_success">清空成功</string>
    <string name="agree">同意</string>
    <string name="reject">拒绝</string>

    <string name="service_title"><b>用户服务协议</b></string>
    <string name="service_doc"><![CDATA[<p>\u3000\u3000为使用STEP的服务，您应当阅读并遵守《用户服务协议》（以下简称“本协议”）。请您务必审慎阅读、充分理解各条款内容，特别是免除或者限制责任的条款。除非您已阅读并接受本协议所有条款，否则您无权使用STEP提供的服务。您使用STEP的服务即视为您已阅读并同意本协议的约束。<br/>
\u3000\u3000如果您未满18周岁，或者不具备完全民事行为能力，请在法定监护人的陪同下阅读本协议，并特别注意未成年人使用条款。否则STEP对于该等后续注册、使用网站服务等行为而对您所发生的不利后果不承担责任，并有权在知晓该等情况后解除双方间的服务协议。<br/></p>
<b>一、【协议的范围】</b><br/>
\u3000\u3000本协议是您与STEP经营者之间关于用户使用STEP相关服务所订立的协议。STEP的经营者是指法律认可的经营STEP移动APP的责任主体。“用户”是指使用STEP相关服务的使用人，在本协议中更多地称为“您”。<br/>
<b>二、【帐号与密码安全】</b><br/>
  2.1 您在使用STEP的服务时通过微信账号登录，并生成STEP账号。<br/>
  2.2 STEP特别提醒您应妥善保管您的帐号和密码。当您使用完毕后，应安全退出。因您保管不善可能导致遭受盗号或密码失窃，责任由您自行承担。<br/>
  2.3 STEP系基于地理位置的移动社交产品，您注册时应当授权上海创客网络科技有限公司公开及使用其地理位置信息方可成功注册STEP帐号。故您完成注册即表明您同意创客科技提取、公开及使用您的地理位置信息。<br/>
<b>三、【用户个人信息保护】</b><br/>
  3.1 保护用户个人信息是STEP的一项基本原则。<br/>
  3.2 您在注册帐号或使用本服务的过程中，可能需要填写一些必要的信息。若国家法律法规有特殊规定的，您需要填写真实的身份信息。若您填写的信息不完整，则无法使用本服务或在使用过程中受到限制。<br/>
  3.3 一般情况下，您可随时浏览、修改自己提交的信息，但出于安全性和身份识别（如号码申诉服务）的考虑，您可能无法修改注册时提供的初始注册信息及其他验证信息。<br/>
  3.4 STEP将运用各种安全技术和程序建立完善的管理制度来保护您的个人信息，以免遭受未经授权的访问、使用或披露。<br/>
  3.5 未经您的同意，STEP不会向STEP以外的任何公司、组织和个人披露您的个人信息，但法律法规另有规定的除外。<br/>
  3.6 STEP非常重视对未成年人个人信息的保护。若父母（监护人）希望未成年人（尤其是十岁以下子女）得以使用STEP提供的服务，必须以父母（监护人）名义申请注册，并应以法定监护人身份对服务是否符合于未成年人加以判断。STEP保证不对外公开或向第三方披露或提供用户注册资料及用户在使用网络服务时存储在STEP平台、服务器或数据库的非公开内容和信息，但下列情况除外：<br/>
 <div>  1) 事先获得用户的明确授权；<br/>
   2) 根据有关的法律法规要求；<br/>
   3) 按照相关政府主管部门和司法机关的要求；<br/>
   4) 为维护社会公众的利益；<br/>
   5) 为维护STEP的合法权益。<br/></div>
<b>四、【使用本服务的方式】</b><br/>
  4.1 使用方式<br/>
<div>  a. 除非您与STEP另有约定，您同意本服务仅为您个人非商业性质的使用。<br/>
  b. 您应当通过STEP提供或认可的方式使用本服务。您依本协议条款所取得的权利不可转让。<br/>
  c. 您不得使用未经STEP授权的插件、外挂或第三方工具对本协议项下的服务进行干扰、破坏、修改或施加其他影响。 <br/></div>
  4.2 \u3000\u3000违反以上约定视为您的严重违约，STEP可以中止对您的服务，解除双方间的服务协议和法律关系，且无需退还您所支付的费用，视为您支付STEP的违约金，如违约金不足以弥补STEP的损失的，STEP还可通过其他法律途径向您追索。<br/>
<b>五、【服务内容】</b><br/>
\u3000\u3000本服务的具体内容由创客网络科技根据实际情况提供，包括但不限于授权用户通过其帐号进行即时通讯、添加好友、发布及参加约行、关注他人、发布心情留言。创客网络科技可以对其提供的服务予以变更，且创客网络科技提供的服务内容可能随时变更；用户将会收到创客网络科技关于服务变更的通知。<br/>
<b>六、【按现状提供服务】</b><br/>
\u3000\u3000您理解并同意，STEP的服务是按照现有技术和条件所能达到的现状提供的。STEP会尽最大努力向您提供服务，确保服务的连贯性和安全性；但STEP不能随时预见和防范法律、技术以及其他风险，包括但不限于不可抗力、病毒、木马、黑客攻击、系统不稳定、第三方服务瑕疵、政府行为等原因可能导致的服务中断、数据丢失以及其他的损失和风险。<br/>
<b>七、【自备设备】</b><br/>
  7.1 您应当理解，您使用STEP的服务需自行准备与相关服务有关的终端设备（如手机、电脑、调制解调器等装置），并承担所需的费用（如电话费、上网费等费用）。<br/>
  7.2 您理解并同意，您使用本服务时会耗用您的终端设备和带宽等资源。<br/>
<b>八、【广告】</b><br/>
  8.1 您同意STEP可以在提供服务的过程中自行或由第三方广告商向您发送广告、推广或宣传信息（包括商业与非商业信息），其方式和范围可不经向您特别通知而变更。<br/>
  8.2 STEP依照法律的规定对广告商履行相关义务，您应当自行判断广告信息的真实性并为自己的判断行为负责，除法律明确规定外，您因依该广告信息进行的交易或前述广告商提供的内容而遭受的损失或损害，STEP不承担责任。<br/>
  8.3 您同意，对STEP服务中出现的广告信息，您应审慎判断其真实性和可靠性，除法律明确规定外，您应对依该广告信息进行的交易负责。<br/>
<b>九、【内容规范】</b><br/>
  9.1 本条所述内容是指用户使用本服务过程中所制作、上载、复制、发布、传播的任何内容，包括但不限于帐号头像、名称、用户说明等注册信息及认证资料，或文字、语音、图片、视频、图文等发送、回复或自动回复消息和相关链接页面，以及其他使用帐号或本服务所产生的内容。<br/>
  9.2 用户不得利用STEP帐号或本服务制作、上载、复制、发布、传播如下法律、法规和政策禁止的内容： <br/>
<div>  (1) 反对宪法所确定的基本原则的；<br/>
  (2) 危害国家安全，泄露国家秘密，颠覆国家政权，破坏国家统一的；<br/>
  (3) 损害国家荣誉和利益的； <br/>
  (4) 煽动民族仇恨、民族歧视，破坏民族团结的； <br/>
  (5) 破坏国家宗教政策，宣扬邪教和封建迷信的； <br/>
  (6) 散布谣言，扰乱社会秩序，破坏社会稳定的； <br/>
  (7) 散布淫秽、色情、赌博、暴力、凶杀、恐怖或者教唆犯罪的； <br/>
  (8) 侮辱或者诽谤他人，侵害他人合法权益的； <br/>
  (9) 不遵守法律法规底线、社会主义制度底线、国家利益底线、公民合法权益底线、社会公共秩序底线、道德风尚底线和信息真实性底线的“七条底线”要求的； <br/>
  (10) 含有法律、行政法规禁止的其他内容的信息。<br/></div>
  9.3 用户不得利用STEP帐号或本服务制作、上载、复制、发布、传播如下干扰STEP正常运营，以及侵犯其他用户或第三方合法权益的内容：<br/>
<div>  (1) 含有任何性或性暗示的； <br/>
  (2) 含有辱骂、恐吓、威胁内容的； <br/>
  (3) 含有骚扰、垃圾广告、恶意信息、诱骗信息的； <br/>
  (4) 涉及他人隐私、个人信息或资料的； <br/>
  (5) 侵害他人名誉权、肖像权、知识产权、商业秘密等合法权利的； <br/>
  (6) 含有其他干扰本服务正常运营和侵犯其他用户或第三方合法权益内容的信息。<br/></div>
<b>十、【使用规则】</b><br/>
  10.1 用户在本服务中或通过本服务所传送、发布的任何内容并不反映或代表，也不得被视为反映或代表创客网络科技的观点、立场或政策，创客网络科技对此不承担任何责任。  <br/>
  10.2用户不得利用STEP帐号或本服务进行如下行为： <br/>
<div>  (1) 提交、发布虚假信息，或盗用他人头像或资料，冒充、利用他人名义的； <br/>
  (2) 强制、诱导其他用户关注、点击链接页面或分享信息的； <br/>
  (3) 虚构事实、隐瞒真相以误导、欺骗他人的； <br/>
  (4) 利用技术手段批量建立虚假帐号的； <br/>
  (5) 利用STEP帐号或本服务从事任何违法犯罪活动的； <br/>
  (6) 制作、发布与以上行为相关的方法、工具，或对此类方法、工具进行运营或传播，无论这些行为是否为商业目的； <br/>
  (7) 其他违反法律法规规定、侵犯其他用户合法权益、干扰STEP正常运营或创客网络科技未明示授权的行为。 <br/></div>
  10.3 用户须对利用STEP帐号或本服务传送信息的真实性、合法性、无害性、准确性、有效性等全权负责，与用户所传播的信息相关的任何法律责任由用户自行承担，与创客网络科技无关。如因此给创客网络科技或第三方造成损害的，用户应当依法予以赔偿。 <br/>
  10.4 创客网络科技提供的服务中可能包括广告，用户同意在使用过程中显示创客网络科技和第三方供应商、合作伙伴提供的广告。除法律法规明确规定外，用户应自行对依该广告信息进行的交易负责，对用户因依该广告信息进行的交易或前述广告商提供的内容而遭受的损失或损害，创客网络科技不承担任何责任。<br/>
  10.5 除非创客网络科技书面许可，用户不得从事下列任一行为： <br/>
<div>  (1) 删除软件及其副本上关于著作权的信息； <br/>
  (2) 对软件进行反向工程、反向汇编、反向编译，或者以其他方式尝试发现软件的源代码；<br/>
  (3) 对创客网络科技拥有知识产权的内容进行使用、出租、出借、复制、修改、链接、转载、汇编、发表、出版、建立镜像站点等； <br/>
  (4) 对软件或者软件运行过程中释放到任何终端内存中的数据、软件运行过程中客户端与服务器端的交互数据，以及软件运行所必需的系统数据，进行复制、修改、增加、删除、挂接运行或创作任何衍生作品，形式包括但不限于使用插件、外挂或非经创客网络科技授权的第三方工具/服务接入软件和相关系统； <br/>
  (5) 通过修改或伪造软件运行中的指令、数据，增加、删减、变动软件的功能或运行效果，或者将用于上述用途的软件、方法进行运营或向公众传播，无论这些行为是否为商业目的； <br/>
  (6) 通过非创客网络科技开发、授权的第三方软件、插件、外挂、系统，登录或使用创客网络科技软件及服务，或制作、发布、传播非创客网络科技开发、授权的第三方软件、插件、外挂、系统。<br/></div>
<b>十一、【第三方提供的产品或服务】</b><br/>
\u3000\u3000您在STEP平台上使用第三方提供的产品或服务时，除遵守本协议约定外，还应遵守第三方的用户协议。STEP和第三方对可能出现的纠纷在法律规定和约定的范围内各自承担责任。<br/>
<b>十二、【知识产权声明】</b><br/>
  12.1 STEP在本服务中所使用的商业标识，其著作权或商标权归STEP所有。<br/>
  12.2 STEP所提供的服务与服务有关的全部信息、资料、文字、软件、声音、图片、视频、图表（包括相关的软件）的著作权、商标、商业秘密、其他知识产权、所有权或其他权利，均为STEP或其权利人所有，受中华人民共和国相关法律及中华人民共和国加入的国际协定和国际条约保护，除非事先获得STEP或其权利人的合法授权，您不得对任何该信息、资料、文字、软件、声音、图片、视频、图表进行修改、拷贝、散布、传送、展示、执行、复制、发行、授权、制作衍生著作、移转或销售。如您未遵守本条款的上述规定，在不损害其他权利的情况下，STEP可立即终止向您提供服务，您必须销毁任何已经获得的上述信息、资料、文字、软件、声音、图片、视频、图表。违者视为您的严重违约，STEP可以中止对您的服务，解除双方间的服务协议和法律关系，且无需退还您所支付的费用，视为您支付STEP的违约金，如违约金不足以弥补STEP的损失的，STEP还可通过其他法律途径向您追索。<br/>
<b>十三、【用户违法行为】</b><br/>
  13.1 您在使用本服务时须遵守法律法规，不得利用本服务从事违法违规行为，包括但不限于：<br/>
<div> （1）发布、传送、传播、储存危害国家安全统一、破坏社会稳定、违反公序良俗、侮辱、诽谤、淫秽、暴力以及任何违反国家法律法规的内容；<br/>
 （2）发布、传送、传播、储存侵害他人知识产权、商业秘密等合法权利的内容；<br/>
 （3）恶意虚构事实、隐瞒真相以误导、欺骗他人；<br/>
 （4）发布、传送、传播广告信息及垃圾信息； <br/>
 （5）其他法律法规禁止的行为。 <br/></div>
  13.2 如果您违反了本条约定，相关国家机关或机构可能会对您提起诉讼、罚款或采取其他制裁措施，并要求STEP给予协助。造成损害的，您应依法予以赔偿，STEP不承担任何责任。<br/>
  13.3 如果STEP发现或收到他人举报您发布的信息违反本条约定，STEP有权进行独立判断并采取技术手段予以删除、屏蔽或断开链接。同时，STEP有权视用户的行为性质，采取包括但不限于暂停或终止服务，限制、冻结或终止账号使用，追究法律责任等措施。<br/>
  13.4 您违反本条约定，导致任何第三方损害的，您应当独立承担责任；STEP因此遭受损失的，您也应当一并赔偿。<br/>
  13.5 违反本条约定，视为您的严重违约，STEP可以中止对您的服务，解除双方间的服务协议和法律关系，且无需退还您所支付的费用，视为您支付STEP的违约金，如违约金不足以弥补STEP的损失的，STEP还可通过其他法律途径向您追索。<br/>
<b>十四、【遵守当地法律监管】</b><br/>
  14.1 您在使用本服务过程中应当遵守当地相关的法律法规，并尊重当地的道德和风俗习惯。如果您的行为违反了当地法律法规或道德风俗，您应当为此独立承担责任。<br/>
  14.2 您应避免因使用本服务而使STEP卷入政治和公共事件，否则STEP有权暂停或终止对您的服务。 <br/>
  14.3 违反本条约定，视为您的严重违约，STEP可以中止对您的服务，解除双方间的服务协议和法律关系，且无需退还您所支付的费用，视为您支付STEP的违约金，如违约金不足以弥补STEP的损失的，STEP还可通过其他法律途径向您追索。<br/>
<b>十五、【用户发送、传播的内容与第三方投诉处理】</b><br/>
  15.1 您通过本服务发送或传播的内容（包括但不限于网页、文字、图片、音频、视频、图表等）均由您自行承担责任。<br/>
  15.2 您发送或传播的内容应有合法来源，相关内容为您所有或您已获得权利人的授权。<br/>
  15.3 您同意STEP可为履行本协议或提供本服务的目的而使用您发送或传播的内容。<br/>
  15.4 如果STEP收到权利人通知，主张您发送或传播的内容侵犯其相关权利的，您同意STEP有权进行独立判断并采取删除、屏蔽或断开链接等措施。<br/>
<b>十六、【不可抗力及其他免责事由】</b><br/>
  16.1 您理解并同意，在使用本服务的过程中，可能会遇到不可抗力等风险因素，使本服务发生中断。不可抗力是指不能预见、不能克服并不能避免且对一方或双方造成重大影响的客观事件，包括但不限于自然灾害如洪水、地震、瘟疫流行和风暴等以及社会事件如战争、动乱、政府行为等。出现上述情况时，STEP将努力在第一时间与相关单位配合，及时进行修复，但是由此给您造成的损失STEP在法律允许的范围内免责。<br/>
  16.2 在法律允许的范围内，STEP对以下情形导致的服务中断或受阻不承担责任：<br/>
<div> （1）受到计算机病毒、木马或其他恶意程序、黑客攻击的破坏；<br/>
 （2）用户或STEP的电脑软件、系统、硬件和通信线路出现故障；<br/>
 （3）用户操作不当；<br/>
 （4）用户通过非STEP授权的方式使用本服务；<br/>
 （5）其他STEP无法控制或合理预见的情形。<br/></div>
 16.3 您理解并同意，在使用本服务的过程中，可能会遇到网络信息或其他用户行为带来的风险，STEP不对任何信息的真实性、适用性、合法性承担责任，也不对因侵权行为给您造成的损害负责。这些风险包括但不限于：<br/>
<div> （1）来自他人匿名或冒名的含有威胁、诽谤、令人反感或非法内容的信息；<br/>
 （2）因使用本协议项下的服务，遭受他人误导、欺骗或其他导致或可能导致的任何心理、生理上的伤害以及经济上的损失；<br/>
 （3）其他因网络信息或用户行为引起的风险。<br/></div>
  16.4 您理解并同意，本服务并非为某些特定目的而设计，包括但不限于核设施、军事用途、医疗设施、交通通讯等重要领域。如果因为软件或服务的原因导致上述操作失败而带来的人员伤亡、财产损失和环境破坏等，STEP不承担法律责任。 <br/>
  16.5 STEP依据本协议约定获得处理违法违规内容的权利，该权利不构成STEP的义务或承诺，STEP不能保证及时发现违法行为或进行相应处理。 <br/>
  16.6 在任何情况下，您不应轻信借款、索要密码或其他涉及财产的网络信息。涉及财产操作的，请一定先核实对方身份，并请经常留意STEP有关防范诈骗犯罪的提示。 <br/>
<b>十七、【协议的生效与变更】</b><br/>
  17.1 您使用STEP的服务即视为您已阅读本协议并接受本协议的约束。<br/>
  17.2 STEP有权在必要时修改本协议条款。您可以在相关服务页面查阅最新版本的协议条款。<br/>
  17.3 本协议条款变更后，如果您继续使用STEP提供的软件或服务，即视为您已接受修改后的协议。如果您不接受修改后的协议，应当停止使用STEP提供的软件或服务。  <br/>
<b>十八、【服务的变更、中断、终止】</b><br/>
  18.1 STEP可能会对服务内容进行变更，也可能会中断、中止或终止服务。<br/>
  18.2 如发生下列任何一种情形，STEP有权不经通知而中断或终止向您提供的服务：<br/>
<div> （1）根据法律规定您应提交真实信息，而您提供的个人资料不真实、或与注册时信息不一致又未能提供合理证明；<br/>
 （2）您违反相关法律法规或本协议的约定；<br/>
 （3）按照法律规定或主管部门的要求；<br/>
 （4）出于安全的原因或其他必要的情形。<br/></div>
 <b>十九、【管辖与法律适用】</b><br/>
  19.1 本协议签订地为中华人民共和国上海市浦东新区。<br/>
  19.2 本协议的成立、生效、履行、解释及纠纷解决，适用中华人民共和国大陆地区法律（不包括冲突法）。<br/>
  19.3 若您和STEP之间发生任何纠纷或争议，首先应友好协商解决；协商不成的，您同意将纠纷或争议提交本协议签订地有管辖权的人民法院管辖。<br/>
  19.4 本协议所有条款的标题仅为阅读方便，本身并无实际涵义，不能作为本协议涵义解释的依据。<br/>
  19.5 本协议条款无论因何种原因部分无效或不可执行，其余条款仍有效，对双方具有约束力。<br/>
<b>二十、【未成年人使用条款】</b><br/>
  20.1 若用户未满18周岁，则为未成年人，应在监护人监护、指导下阅读本协议和使用本服务。<br/>
  20.2 未成年人用户涉世未深，容易被网络虚象迷惑，且好奇心强，遇事缺乏随机应变的处理能力，很容易被别有用心的人利用而又缺乏自我保护能力。因此，未成年人用户在使用本服务时应注意以下事项，提高安全意识，加强自我保护：<br/>
<div> （1）认清网络世界与现实世界的区别，避免沉迷于网络，影响日常的学习生活；<br/>
 （2）填写个人资料时，加强个人保护意识，以免不良分子对个人生活造成骚扰；<br/>
 （3）在监护人或老师的指导下，学习正确使用网络；<br/>
 （4）避免陌生网友随意会面或参与联谊活动，以免不法分子有机可乘，危及自身安全。<br/></div>
  20.3 监护人、学校均应对未成年人使用本服务时多做引导。特别是家长应关心子女的成长，注意与子女的沟通，指导子女上网应该注意的安全问题，防患于未然。若父母（监护人）希望未成年人（尤其是十岁以下子女）得以使用STEP提供的服务，必须以父母（监护人）名义申请注册，并应以法定监护人身份对服务是否符合于未成年人加以判断。<br/>
<b>二十一、【其他】</b><br/>
\u3000\u3000如果您对本协议或本服务有意见或建议，可与STEP网站客服专区联系（http://www.westepper.com/），我们会给予您必要的帮助。（正文完）<br/>
]]></string>
</resources>
