<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:menu="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/colorHint">

    <FrameLayout
        android:id="@+id/fl_container"
        android:layout_width="match_parent"
        android:layout_height="match_parent">
    </FrameLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <ImageView
                    android:id="@+id/iv_header_bg"
                    android:layout_width="match_parent"
                    android:layout_height="230dp"
                    android:layout_centerInParent="true"
                    android:scaleType="centerCrop"/>

                <RelativeLayout
                    android:id="@+id/rl_header_icon"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="17dp"
                    android:layout_centerInParent="true">


                    <TextView
                        android:id="@+id/margin"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="18dp"/>

                    <com.uilib.joooonho.SelectableRoundedImageView
                        android:id="@+id/iv_header"
                        android:layout_width="74dp"
                        android:layout_height="74dp"
                        android:src="@mipmap/ic_default_head"
                        android:layout_margin="4dp"
                        android:layout_centerHorizontal="true"
                        android:layout_below="@+id/margin"
                        android:scaleType="centerCrop"
                        menu:sriv_border_color="@android:color/white"
                        menu:sriv_border_width="1dp"
                        menu:sriv_oval="true" />

                    <ImageView
                        android:id="@+id/iv_user_edit"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignBottom="@+id/iv_header"
                        android:layout_alignRight="@+id/iv_header"
                        android:src="@mipmap/icon_edit"/>

                    <TextView
                        android:id="@+id/tv_user_name"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textColor="@android:color/white"
                        android:text="点击登录"
                        android:layout_below="@+id/iv_header"
                        android:layout_centerHorizontal="true"
                        android:layout_marginTop="8dp"/>

                    <TextView
                        android:id="@+id/tv_userId"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textColor="@color/discovery_time"
                        android:text="ID:"
                        android:textSize="12sp"
                        android:layout_below="@+id/tv_user_name"
                        android:layout_centerHorizontal="true"
                        android:layout_marginTop="10dp"/>
                </RelativeLayout>

                <TextView
                    android:id="@+id/tv_city"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:drawableLeft="@mipmap/ic_city1"
                    android:drawablePadding="5dp"
                    android:layout_marginTop="25dp"
                    android:layout_marginLeft="15dp"
                    android:textColor="@android:color/white"
                    android:textSize="14sp"
                    android:text="上海"/>
            </RelativeLayout>

            <com.westepper.step.customViews.MyMenuItem
                android:id="@+id/menu_paihang"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                menu:menuIcon="@mipmap/ic_paihang"
                menu:menuTitle="@string/menu_paihang"
                menu:needSubText="true"
                menu:needNext="true"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="93dp"
                android:orientation="horizontal"
                android:background="@android:color/white"
                android:layout_marginBottom="10dp">

                <RelativeLayout
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="match_parent"
                    android:layout_marginBottom="13dp">

                    <com.uilib.joooonho.SelectableRoundedImageView
                        android:id="@+id/iv_first"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:src="@mipmap/ic_default_head"
                        android:layout_marginTop="10dp"
                        android:layout_marginBottom="5dp"
                        menu:sriv_oval="true" />

                    <TextView
                        style="@style/paihang_txt_no"
                        android:background="@drawable/shape_first"
                        android:text="NO.1" />
                </RelativeLayout>

                <RelativeLayout
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="match_parent"
                    android:layout_marginBottom="13dp">

                    <com.uilib.joooonho.SelectableRoundedImageView
                        android:id="@+id/iv_second"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:src="@mipmap/ic_default_head"
                        android:layout_marginTop="10dp"
                        android:layout_marginBottom="5dp"
                        menu:sriv_oval="true" />

                    <TextView
                        style="@style/paihang_txt_no"
                        android:background="@drawable/shape_second"
                        android:text="NO.2" />
                </RelativeLayout>

                <RelativeLayout
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="match_parent"
                    android:layout_marginBottom="13dp">

                    <com.uilib.joooonho.SelectableRoundedImageView
                        android:id="@+id/iv_third"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:src="@mipmap/ic_default_head"
                        android:layout_marginTop="10dp"
                        android:layout_marginBottom="5dp"
                        menu:sriv_oval="true" />

                    <TextView
                        style="@style/paihang_txt_no"
                        android:background="@drawable/shape_third"
                        android:text="NO.3" />
                </RelativeLayout>
            </LinearLayout>

            <com.westepper.step.customViews.MyMenuItem
                android:id="@+id/menu_mood"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                menu:menuIcon="@mipmap/icon_smile"
                menu:menuTitle="@string/menu_mood"
                menu:needNext="true"/>
            <com.westepper.step.customViews.MyMenuItem
                android:id="@+id/menu_go"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                menu:menuIcon="@mipmap/icon_outgo"
                menu:menuTitle="@string/menu_go"
                menu:needNext="true"/>
            <com.westepper.step.customViews.MyMenuItem
                android:id="@+id/menu_discovery"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                menu:menuIcon="@mipmap/icon_discovery_selected"
                menu:menuTitle="@string/menu_discovery"
                menu:needNext="true"/>
            <com.westepper.step.customViews.MyMenuItem
                android:id="@+id/menu_acheive"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                menu:menuIcon="@mipmap/ic_acheive_selected"
                menu:menuTitle="@string/menu_acheive"
                menu:needNext="true"/>
            <com.westepper.step.customViews.MyMenuItem
                android:id="@+id/menu_setting"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                menu:menuIcon="@mipmap/icon_setting"
                menu:menuTitle="@string/menu_setting"
                menu:needNext="true"
                menu:needLine="false"/>
        </LinearLayout>
    </ScrollView>
    </LinearLayout>


</FrameLayout>